<?xml version="1.0"?>
<package format="2">
  <name>deeporange14_control</name>
  <version>0.1.0</version>
  <description>The deeporange14_control package</description>
  <maintainer email="azinnec@clemson.edu">Alicia Zinnecker</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <!--<build_depend>roslaunch</build_depend>-->
  <build_depend>can_dbc_parser</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <!--<build_depend>message_runtime</build_depend>-->
  <build_depend>sensor_msgs</build_depend>
  <build_depend>deeporange14_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>novatel_oem7_msgs</build_depend>
  <!--<build_depend>roslint</build_depend>-->
  <build_depend>can_msgs</build_depend>
  <build_depend>tf2_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  
  <build_export_depend>rclcpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <!--<exec_depend>controller_manager</exec_depend>-->
  <!--<exec_depend>interactive_marker_twist_server</exec_depend>-->
  <!--<exec_depend>diff_drive_controller</exec_depend>-->
  <!--<exec_depend>joint_state_controller</exec_depend>-->
  <!--<exec_depend>joy</exec_depend>-->
  <!--<exec_depend>robot_localization</exec_depend>-->
  <!--<exec_depend>teleop_twist_joy</exec_depend>-->
  <!--<exec_depend>topic_tools</exec_depend>-->
  <!--<exec_depend>twist_mux</exec_depend>-->
  <exec_depend>novatel_oem7_msgs</exec_depend>
  <exec_depend>can_dbc_parser</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <!--<exec_depend>message_runtime</exec_depend>-->
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>deeporange14_msgs</exec_depend>
  <!--<exec_depend>socketcan_bridge</exec_depend>-->
  <exec_depend>can_msgs</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
