<?xml version="1.0"?>
<package format="2">
  <name>deeporange14_control</name>
  <version>0.1.0</version>
  <description>
    Implements the ROS-CAN interface and autonomy state machine that form the
    interface between the DO14 vehicle and the Phoenix autonomy stack
  </description>
  <maintainer email="paredis@clemson.edu">Chris Paredis</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib_msgs</depend>
  <depend>can_dbc_parser</depend>
  <depend>can_msgs</depend>
  <depend>deeporange14_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>socketcan_bridge</depend>
  <depend>std_msgs</depend>
  
  <build_depend>roslaunch</build_depend>
  <build_depend>roslint</build_depend>

  <exec_depend>message_runtime</exec_depend>
</package>
