<?xml version="1.0"?>
<package format="3">
  <name>deeporange14_msgs</name>
  <version>1.0.0</version>
  <description>
    Drive-by-wire messages for the control on DO14 (ROS2 package)
  </description>

  <license>BSD</license>

  <maintainer email="azinnec@clemson.edu">Alicia Zinnecker</maintainer>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
