<?xml version="1.0"?>
<package format="2">
  <name>deeporange14_msgs</name>
  <version>1.0.0</version>
  <description>
    Drive-by-wire messages for the control on DO14
  </description>

  <license>BSD</license>

  <maintainer email="cparedis@clemson.edu">Chris Paredis</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  
  <build_depend>message_generation</build_depend>
  
  <exec_depend>message_runtime</exec_depend>
</package>
